--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	                <span class="number" data-number="1">0</span>
 	                <span>Project complete</span>
                 </p>
-                <p><a href="/images/David_CV.pdf" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <a href="/images/David_Budha_Magar_CV.pdf" download class="btn btn-primary py-3 px-3">Download CV</a>
               </div>
 	          </div>
 	        </div>
@@ -159,7 +159,7 @@
     					<span class="position">Mount View English Boarding Secondary School </span>
     						</div>
     				<div class="resume-wrap ftco-animate">
-    					<span class="date">2023-</span>
+    					<span class="date">2023-2025</span>
     					<h2>BSc Networking And IT Security</h2>
     					<span class="position">Islington College </span>
     						</div>
