--- a/index.html
+++ b/index.html
@@ -120,8 +120,9 @@
 	                <span class="number" data-number="1">0</span>
 	                <span>Project complete</span>
                 </p>
-                <a href="/images/David_Budha_Magar_CV.pdf" download class="btn btn-primary py-3 px-3">Download CV</a>
-              </div>
+                <a href="images/David_Budha_Magar_CV.pdf" class="btn btn-primary py-3 px-3" target="_blank" rel="noopener noreferrer"> Download CV </a>
+
+			</div>
 	          </div>
 	        </div>
         </div>
