--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>David Budha Magar</span></h1>
-			            <h2 class="mb-4">A Student</h2>
+			            <h2 class="mb-4">IT professional</h2>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#projects-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -76,7 +76,7 @@
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span><br>Networking And IT Security Student</br></span>In Islington College</h1>
+			            <h1 class="mb-4 mt-3">I'm a <span><br>Social Media Enforcement Team(SMET)</br></span>In Vairav Technology PVT LTD</h1>
 			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#contact-section" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
@@ -101,9 +101,12 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>I'm a network and IT security student who's passionate about gaming, music, and outdoor adventures like hiking and trekking.
-						 I love immersing myself in technology while also enjoying the beauty of nature.
-						 Balancing digital exploration with real-world experiences is what keeps me engaged and fulfilled.</p>
+		            <p>Motivated and enthusiastic IT professional with a solid background in computer networking and cybersecurity,
+						supported by real-world experience in social media threat monitoring, web application security, and
+						developing security frameworks. Passionate about Network Security, SOC operations, and Cloud Security.
+						Skilled in detecting and responding to cyber threats, building intrusion detection systems, and automating
+						tasks using Python and Linux. Eager to contribute to innovative security initiatives and continuously grow
+						technical expertise.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>David Budha Magar</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>April, 17, 1999</span></li>
@@ -135,16 +138,13 @@
           <div class="col-md-10 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Resume</h1>
             <h2 class="mb-4">Resume</h2>
-            <p>Motivated and enthusiastic IT student
-				in the field of Networking and IT 
-				Security. I am currently in my Fourth 
-				semester at Islington College.
-				I am seeking an internship position to 
-				gain practical experience and 
-				contribute to an innovative 
-				organization’s technology initiatives.
-				I am a dedicated and motivated 
-				individual with a strong interest</p>
+            <p>Motivated and enthusiastic IT professional with a solid background in computer networking and cybersecurity,
+				supported by real-world experience in social media threat monitoring, web application security, and
+				developing security frameworks. Passionate about Network Security, SOC operations, and Cloud Security.
+				Skilled in detecting and responding to cyber threats, building intrusion detection systems, and automating
+				tasks using Python and Linux. Eager to contribute to innovative security initiatives and continuously grow
+				technical expertise.
+			</p>
           </div>
         </div>
     		<div class="row">
@@ -266,7 +266,7 @@
 							<div class="progress">
 							 	<div class="progress-bar color-2" role="progressbar" aria-valuenow="45"
 							  	aria-valuemin="0" aria-valuemax="100" style="width:45%">
-							    <span>45%</span>
+							    <span>55%</span>
 							  	</div>
 							</div>
 						</div>
